--- a/Ghost Host/css and images/style.css
+++ b/Ghost Host/css and images/style.css
@@ -40,13 +40,6 @@ a span {
     -o-transition: 0.2s ease-in-out;
     transition: 0.2s ease-in-out;
 }
-.btn.extra-width {
-    padding: 13px 40px;
-}
-.btn:focus,
-.btn:active {
-    outline: inherit;
-}
 *,
 *:before,
 *:after {
@@ -61,14 +54,11 @@ p {
 a, p{
  font-family: 'latolight';   
 }
-.clear {
-    clear: both;
-}
 
 img {
     max-width: 100%;
 }
-textarea,
+
 input[type="text"],
 input[type="password"],
 input[type="datetime"],
@@ -82,8 +72,7 @@ input[type="email"],
 input[type="url"],
 input[type="search"],
 input[type="tel"],
-input[type="color"],
-.uneditable-input {
+input[type="color"] {
     outline: none;
 }
 .form-control {
@@ -95,7 +84,6 @@ input[type="color"],
     border-color: #f56363;
 }
 
-h1,
 h2,
 h3 {
  
@@ -108,11 +96,6 @@ h5 {
     font-weight: 300;
     margin: 0;
     line-height: 2rem;
-}
-h1 {
-    font-size: 3rem;
-    line-height: 4rem;
-    font-weight: 300;
 }
 h2 {
     font-size: 2.5rem;
@@ -146,43 +129,9 @@ p:last-child {
     margin-bottom: 0px;
 }
 
-.home-wrap h2,
-.home-wrap h3,
-.home-wrap h4,
-.home-wrap h5,
-.home-wrap p {
-    color: #ffffff;
- 
-}
 .text {
     color: #333333;
 }
-.colorstext {
-    color: #f56363;
-}
-.coloricon i {
-    color: #f56363;
-}
-.colorsbg {
-    background: #f56363;
-    color: #ffffff;
-}
-
-.lightbg {
-    background-color: #f9f9f9;
-}
-.transition {
-    -webkit-transition: all 300ms linear;
-    -moz-transition: all 300ms linear;
-    -o-transition: all 300ms linear;
-    -ms-transition: all 300ms linear;
-    transition: all 300ms linear;
-}
-
-.outofsectiontext{
-    margin-top: 40px;
-}
-
 
 .sections {
     margin-top:50px;
@@ -191,15 +140,8 @@ p:last-child {
 .sections.footer {
     padding-bottom: 80px;
 }
-section .subtitle h5 {
-    margin-top: 10px;
-    font-size: 1.3rem;
-    font-family: 'roboto', sans-serif;
-}
 
-.heading {
-    margin-bottom: 4rem;
-}
+
 .overlay {
     background-color: rgba(0, 0, 0, 0.60);
     width: 100%;
@@ -267,108 +209,6 @@ section .subtitle h5 {
     background:  #1abc9c;
 }
 
-
-.btn-primary.active.focus,
-.btn-primary.active:focus,
-.btn-primary.active:hover,
-.btn-primary:active.focus,
-.btn-primary:active:focus,
-.btn-primary:active:hover,
-.open > .dropdown-toggle.btn-primary.focus,
-.open > .dropdown-toggle.btn-primary:focus,
-.open > .dropdown-toggle.btn-primary:hover,
-.btn-primary.focus,
-.btn-primary:focus,
-.btn-primary.disabled,
-.btn-primary.disabled:hover {
-    color: #ffffff;
-    background-color: #f56363;
-    border-color: #f56363;
-}
-
-
-
-.btn {
-    border: 1px solid #3c3c3c;
-    display: inline-block;
-    min-width: 160px;
-    padding: 1em;
-    height: 55px;
-    text-align: center;
-    color: #3c3c3c;
-    font-style: normal;
-    letter-spacing: 1px;
-    margin: 0;
-    font-size: 16px;
-    font-weight: 300;
-    border-radius: 0;
-    margin-top: 30px;
-}
-.btn:hover {
-	background-color: transparent;
-	color: #000;
-	text-decoration: none;
-}
-
-.btn-primary {
-    color: #fff;
-    background-color: #ea6060;
-    border-color: #ea6060;
-    transition: .6s;	
-}
-
-.pink-btn {
-    background: #fff;
-    border: 1px solid #222222;
-    margin-left: 10px;
-    color: #222222;
-    transition: .6s;
-}
-
-.pink-btn:hover {
-	background-color: #ea6060;
-	color: #fff;
-	text-decoration: none;
-	border:1px solid #ea6060;
-}
-
-.btn-white{
-	border:1px solid #fff;
-	color:#fff;
-	border-radius:5px;
-}
-.btn-white:hover{
-	border:1px solid #000;
-	color:#000;
-}
-
-.btn-md{
-	border:1px solid #fff;
-	color:#fff;
-	width:162px;
-	height:52px;
-	background:#ea6060;
-}
-.btn-md:hover{
-	border:1px solid #fff;
-	color:#fff;
-	background:#bfc2c5;
-}
-
-.btn-md2{
-	border:1px solid #222222;
-	color:#222222;
-	width:145px;
-	height:42px;
-	background:#fff;
-	border-radius:4px;
-	padding: .6em;
-}
-.btn-md2:hover{
-	border:1px solid #bfc2c5;
-	color:#222222;
-	background:#bfc2c5;
-}
 
 .margin-top-20 {
     margin-top: 20px;
