--- a/Ghost Host/css and images/style.css
+++ b/Ghost Host/css and images/style.css
@@ -1,5 +1,4 @@
 
-
 html,
 body {
     background-color: #fff;
@@ -147,11 +146,21 @@ p:last-child {
     width: 100%;
     min-height: 400px;
 }
-.overlay-fluid-block {
-    background-color: rgba(0, 0, 0, 0.60);
-    width: 100%;
-    padding: 100px 0px;
+
+.vignette {
+	-webkit-box-shadow: inset 0px 0px 200px rgba(0,0,0,0.4);
+	-moz-box-shadow:    inset 0px 0px 200px rgba(0,0,0,0.4);
+	box-shadow:         inset 0px 0px 200px rgba(0,0,0,0.4);
+	
+	line-height: 0;         /* ensure no space between bottom */
+		
+	display: inline-block;  /* don't go wider than image */
 }
+.vignette img {
+	position: relative; 
+	z-index: -1;            /* position beneath */
+}
+
 .home-overlay-fluid {
     background-color: rgba(0, 0, 0, 0.60);
     width: 100%;
@@ -659,14 +668,9 @@ p:last-child {
 }
 
 
-.comments{
-    background: url(commnsbg.jpg) no-repeat 100% 100%;
-    background-size: cover;
-}
-
 .href_for_carusel{
     color:#fff;
-    font-size: 1em;
+    font-size: 1.2em;
     position: relative;
 }
 
